<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:showDividers="end"  >
    
    
    <LinearLayout
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
		android:layout_gravity="center_horizontal">
	    
		<TextView
		    android:id="@+id/myappname"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:minWidth="90dp"
		    android:textColor="#FFFFFF"
		    android:textSize="20sp"
		    android:layout_gravity="center_horizontal" />
		
	</LinearLayout>
	
	<LinearLayout
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
		android:layout_gravity="center_horizontal">
		
		<Button
		    android:id="@+id/btnuninstall"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/btnuninstall"
		    android:minWidth="80dp"
		    android:textSize="15sp"
		    style="@style/Button"/>
		
		<Button
		    android:id="@+id/btndownload"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/btndownload"
		    android:minWidth="80dp"
		    android:textSize="15sp"
		    android:layout_marginLeft="5dp"
		    style="@style/Button"/>
		
		<Button
		    android:id="@+id/btninstall"
		    style="@style/Button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:clickable="false"
		    android:text="@string/btninstall"
		    android:minWidth="80dp"
		    android:textSize="15sp"
		    android:layout_marginLeft="5dp" />
		
		<Button
		    android:id="@+id/btnremove"
		    style="@style/Button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:clickable="True"
		    android:text="@string/btnremove"
		    android:minWidth="80dp"
		    android:textSize="15sp"
		    android:layout_marginLeft="5dp" />
		
	</LinearLayout>

</LinearLayout>
