<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selectPermission"
    style = "@style/Layout"
    android:orientation="vertical"
    tools:context=".SelectPermissionActivity" 
    android:fitsSystemWindows="true">    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/menulayout">
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
    	android:orientation="vertical" >
        
	    <TextView
	        android:id="@+id/headwelcome"
	        style="@style/Header"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/headselectpermissions"
	        android:textSize="23sp" />
    
	   <TextView
	       android:id="@+id/apkname"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_gravity="center_horizontal"
	       android:text="@string/apknamelabel"
	       android:textAppearance="?android:attr/textAppearanceLarge"
	       android:textColor="#FFFFFF"
	       android:textSize="20sp"
	       android:typeface="monospace" />
	   
    </LinearLayout>
    <ListView
        android:id="@android:id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="#44000000"
        android:gravity="center_horizontal" 
        android:divider="#000000"
        android:dividerHeight="1dip"/>

    <Button
        android:id="@+id/send"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="sendToServer"
        android:text="@string/go" />
</LinearLayout>
