<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    style = "@style/Layout"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:fitsSystemWindows="true">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
    	android:orientation="vertical" >
        
	    <TextView
	        android:id="@+id/headlogin"
	        style="@style/Header"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/app_name"
	        android:textSize="50sp" />
	    
    </LinearLayout>
    
    <TextView
        android:id="@+id/loginidlabel"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
       	android:layout_marginTop="50dp"
        android:textSize="15sp"
        android:text="@string/loginidlabel" />
    
    <EditText
        android:id="@+id/loginid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:minWidth="200dp"
        android:minHeight="30dp"
        android:inputType="text"
        android:background="#FFFFFF"/>
    
   <!--  <Button
        android:id="@+id/btnlogin"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="login"
        android:text="@string/btnlogin"
        android:textSize="15sp" /> -->
    
    <Button
        android:id="@+id/btncreate"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="create"
        android:text="@string/btncreate"
        android:textSize="15sp" />
	
    <!-- Adding an empty list view since main activity
     is inheriting MenuLoader which is a child of List View class -->
    <ListView
        android:id="@android:id/android:list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"/>
    
</LinearLayout>
